# jutils

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md  module-grn.md  module-gs.md  module-job.md  module-seq.md  module-text.md  module-vision.md
docs/en/: index.md  module-analyze.md  module-grn.md  module-gs.md  module-job.md  module-math.md  module-plot.md  module-seq.md  module-text.md  module-vision.md  stability.md
docs/zh/: index.md  module-analyze.md  module-grn.md  module-gs.md  module-job.md  module-math.md  module-plot.md  module-seq.md  module-text.md  module-vision.md  stability.md
omics/: plot_care.py
src/: __init__.py  analyze.py  cli.py  common.py  pheno.py  plot.py  seq.py
src/jsrc/: __init__.py  cli.py
src/jsrc/analyze/: __init__.py  bootstrap_phylo.py  core.py  motif.py  msa_consensus.py  phylo.py  qc.py  snpindel.py
src/jsrc/common/: __init__.py  gff.py
src/jsrc/grn/: __init__.py  centrality.py  convert.py  core.py  serve.py  viewer.py
src/jsrc/gs/: __init__.py  build.py  split.py  train.py
src/jsrc/job/: __init__.py  commands.py
src/jsrc/math/: __init__.py  anova.py  chisquare.py  core.py  correlation.py  decisiontree.py  distribution.py  gbm.py  hcluster.py  hmm.py  kmeans.py  knn.py  mcmc.py  montecarlo.py  naivebayes.py  nonparametric.py  randomforest.py  regression.py  simulate.py  statistics.py  survival.py  ttest.py
src/jsrc/plot/: __init__.py  chromosome.py  circoslite.py  cis.py  core.py  domain.py  dotplot.py  exon.py  gene.py  heart.py  rose.py
src/jsrc/seq/: __init__.py  codon.py  core.py  extract.py  kmer.py  promoter.py  qc.py  rename.py  translate.py  window.py
src/jsrc/text/: __init__.py  core.py  cut.py  dedup.py  grep.py  replace.py  wc.py
src/jsrc/vision/: __init__.py  core.py  efd.py  extract.py  traits.py
tests/: test_analyze_phylo.py  test_cli_error_behavior.py  test_cli_module_flows.py  test_common_gff.py  test_job_portability.py  test_math_statistics.py  test_seq_extract.py  test_seq_window.py
wiki/: index.md  module-analyze.md  module-grn.md  module-plot.md
